fix social button alignment for tablet

--- a/css/site.styl
+++ b/css/site.styl
@@ -552,10 +552,14 @@ ul.language-chooser
 #mailchimp-email
   flex: 1 1 auto
   margin-right: $margin-micro
+  
+#mailchimp-response
+  margin-left: $margin-micro
 
 #social-icon-container
   display: flex 
   flex-direction: row
+  align-items: flex-end
   
 .social-icon
   display: flex
